resources/css/default.scss
/* ... */
.menu-link span {
  position: relative;
  display: block;
  color: #fff;
}

.menu-link span,
.menu-link span::before,
.menu-link span::after {
  background-color: transparent;
}

.menu-link span:focus,
.menu-link span:hover {
  color: #010101cc;
}

/* -- Responsive Styles (Media Queries) ------------------------------------- */

@media screen and (max-width: 40em) {
  #layout.active {
    position: relative;
    right: 11em;

    /* moves to right as many ems as the one used by the menu */
  }

  #menuLink.menu-link.active {
    position: fixed;
    right: 13em;
  }

  #foot.active {
    margin-right: 11em;
  }
}

/************************************************************
HEADER
*************************************************************/
#header {
  height: 6rem;
  background: linear-gradient(141deg, $primaryBackground 0%, $transitionBackground 51%, $secondaryBackground 75%);
}

.logo-header {
  min-width: 8em;
  height: 6rem;
  max-width: 70%;
}

#logo {
  font-family: sans-serif;
  font-size: 2.5em;
  color: white;
  text-shadow: 0 3px 2px #532900;
}

.simple {
  font-weight: 300;
}

.saml {
  font-family: Verdana, sans-serif;
  letter-spacing: -0.12em;
  font-weight: 600;
  margin-left: -0.05em;
}

.language-menu {
  font-family: sans-serif;
  font-weight: 400;
  min-width: 10rem;
  padding: 0em 0.6em !important;
}

.language-bar {
  height: 6rem;
}

/************************************************************
CONTENT
*************************************************************/
#layout {
  right: 0;
  padding-right: 0;
  min-height: 100%;

  /* negative margin = footer height + padding-top + padding-bottom */
  margin: 0 auto -6rem;
}

#content {
  padding-top: 2em;
  padding-bottom: 2rem;
}

.message-box {
  background-color: #f4f4f4;
  border-left: 0.3125rem solid #444;
  box-shadow: 0 5px 8px -6px #0003;
  margin: 1rem 0;
  padding: 1.3rem;
  position: relative;
}

.message-box.error {
  background-color: #f7e4e1;
  border-left-color: #cc4b37;
}

.message-box.warning {
  background-color: $light-yellow;
  border-left-color: #f9f56b;
}

.message-box.success {
  background-color: #daf7e6;
  border-left-color: #46cc48;
}

.auth_methods {
  margin-top: 2em;
  width: 35%;
}

.code-box {
  margin-bottom: 1em;
  border: 1px solid #ccc;

  a {
    padding: 0.5em;
  }
}

.code-box-content {
  word-break: break-all;
  font-size: 1em;
  line-height: 1.15;
  padding: 0.5em 1em;
  display: inline-block;
  min-height: 1em;
  width: 100%;
  height: 100%;
  white-space: pre-wrap;
  font-family: monospace;

  &::selection {
    color: black;
    background: $light-yellow;
  }
}

.code-box-title {
  border-bottom: 1px solid #ccc;
  background-color: #e0e0e0;
  padding: 0.5em 0 0.5em 0.5em;
}

pre#xmlmetadata {
  width: 98%;
}

/************************************************************
 * FOOTER
 ************************************************************/

#bottom,
#push {
  height: 6rem;
}

#footer {
  width: 100%;
  background: linear-gradient(141deg, $primaryBackground 0%, $transitionBackground 51%, $secondaryBackground 75%);
  height: 4rem;
  padding: 2rem 0 0;
  text-align: center;
  color: white;

  a,
  a:visited {
    color: white;

    &:focus,
    &:hover {
      background-color: white;
      color: black;
      padding: 0.15rem;
      margin-left: -0.15rem;
      margin-top: -0.15rem;
      text-decoration: none;
    }
  }
}

.copyrights {
  padding-top: 0.5rem;
  height: 3.5rem;
  font-size: 0.8rem;
}

.logo-footer-space {
  position: absolute;
  right: 0;
  top: 50%;
  transform: translate(0, -50%);
}

html[dir="rtl"] .logo-footer-space {
  right: auto;
  left: 0;
}

.logo-footer {
  height: 4rem;
}

/* ***********************************************************
FORMS
************************************************************ */
.text-area {
  margin-top: 0.5em;
  width: 100%;
  font-size: 0.9em;
  line-height: 1.15;
}

.file-upload input[type="url"][disabled] {
  cursor: pointer;
  color: inherit;
}

input[type="file"] {
  color: black;
}

.center-form {
  display: flex;
  justify-content: center;
}

.login-form-start,
.login-form-submit {
  margin-top: 3ex;
}

input#username:disabled {
  color: #000000;
}

.v-center-right {
  position: absolute;
  left: 0;
  top: 50%;
  transform: translate(0, -50%);
}

/* PURE */
.pure-button,
.pure-form input.edge,
.pure-form textarea.edge {
  border-radius: 0;
}

.pure-form input[type="checkbox"] {
  margin-right: 0.8ex;
  vertical-align: baseline;
}

.pure-control-group {
  margin-bottom: 1ex;
}

.pure-form-aligned .pure-controls {
  margin: 0 0 0 11em;
}

.pure-select {
  float: right;
}

html[dir="rtl"] .pure-select {
  float: left;
}

/************************************************************
 * BUTTONS
 ************************************************************/
.code-box-title .clipboard-btn {
  background-color: #f0f0f0;
  border: 1px solid #ccc;
  position: absolute;
  right: 0;
  height: inherit;
  margin-top: -2em;
  margin-right: 4px;
}

.pure-button {
  margin-left: 1ex;

  &:hover,
  &:focus {
    background-color: #555;
    padding: 0.5em 1em;
    color: #fff;
  }
}

.pure-button-red {
  background-color: #db0100;
  color: #fff;

  &:hover,
  &:focus {
    background-color: #555;
    padding: 0.5em 1em;
  }
}

.pure-button.hollow {
  background-color: #fff;
  color: #6f6f6f;
  border: solid 1px #e6e6e6;
}

.pure-button.hollow:hover {
  background-image: none;
}

.pure-button.hollow[disabled] {
  cursor: auto;
  opacity: initial;
  pointer-events: auto;
  -webkit-user-drag: auto;
  -webkit-user-select: auto;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.pure-button.hljs {
  display: inline-block;
  border: 0;
  background-color: transparent;

  &:hover,
  &:focus {
    background-color: #f0f0f0;
    color: black;
  }
}

.pure-button-group .pure-button:first-child,
.pure-button-group .pure-button:last-child {
  border-radius: 0;
}
/* ... */

